# little-language-model

./: README.md  pyproject.toml  requirements.txt
src/little_language_model/: tokenizer.py
tests/: test_tokenizer.py
